fixed navigtion bug & added defautl og:image

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="https://markketplace.nyc3.digitaloceanspaces.com/uploads/883df60d4b4d9b0ad2bfd03fbc3016e4.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#2d67ff" />
+    <meta name="og:image" content="https://markketplace.nyc3.digitaloceanspaces.com/uploads/844079101806be7f8d3460eedf22cca1.png" />
     <meta
       name="description"
-      content="Landing page for a marketplace application"
+      content="Landing page, powered by markkët"
     />
     <link rel="apple-touch-icon" href="https://markketplace.nyc3.digitaloceanspaces.com/uploads/883df60d4b4d9b0ad2bfd03fbc3016e4.png" />
     <!--
